--- a/index.html
+++ b/index.html
@@ -16,10 +16,14 @@
     </div>
 
     <div class="timer">
-      <div class="days">08 <span class="d">DAYS</span></div>
-      <div class="hours">23 <span class="h">HOURS</span></div>
-      <div class="minutes">55 <span class="m">MINUTES</span></div>
-      <div class="seconds">41 <span class="s">SECONDS</span></div>
+      <div><div class="days">08</div><span class="d">DAYS</span></div>
+      <div><div class="hours">23</div> <span class="h">HOURS</span>
+</div>
+      <div><div class="minutes">55</div><span class="m">MINUTES</span>
+</div>
+      <div><div class="seconds">41</div><span class="s">SECONDS</span>
+</div>
+      
     </div>
 
     <div class="social">
@@ -28,6 +32,6 @@
       <div class="pin"></div>
     </div>
   </main>
-
+<script src="script.js"></script>
 </body>
 </html>
